feat: return empty JSON object when address not found in /fire endpoint
Updated FireController to return {} if no residents or station are found for the address.

Updated FireServiceImpl to return null when data is missing.

Updated unit tests in FireServiceImplTest and in FireControllerTest